--- a/backend/reports/junit.xml
+++ b/backend/reports/junit.xml
@@ -1,9 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<testsuites name="jest tests" tests="2" failures="0" errors="0" time="2.796">
-  <testsuite name="User Signup" errors="0" failures="0" skipped="0" timestamp="2024-03-13T19:14:26" time="2.653" tests="2">
-    <testcase classname="User Signup Should signup a new user successfully" name="User Signup Should signup a new user successfully" time="0.371">
+<testsuites name="jest tests" tests="6" failures="1" errors="0" time="7.334">
+  <testsuite name="Combined Test Including Language Creation" errors="0" failures="1" skipped="0" timestamp="2024-03-14T16:06:31" time="6.58" tests="4">
+    <testcase classname="Combined Test Including Language Creation Adding new language to the Language table should create a new language in the Language table" name="Combined Test Including Language Creation Adding new language to the Language table should create a new language in the Language table" time="0.015">
     </testcase>
-    <testcase classname="User Login Should login the user successfully" name="User Login Should login the user successfully" time="0.128">
+    <testcase classname="Combined Test Including Language Creation Create Exercise should create a new exercise" name="Combined Test Including Language Creation Create Exercise should create a new exercise" time="0.131">
+      <failure>Error: expect(received).toBe(expected) // Object.is equality
+
+Expected: 201
+Received: 500
+    at K:\Git\FullJourneyLingua\JourneyLingua\backend\__tests__\combinedTest.test.ts:40:41
+    at Generator.next (&lt;anonymous&gt;)
+    at fulfilled (K:\Git\FullJourneyLingua\JourneyLingua\backend\__tests__\combinedTest.test.ts:5:58)
+    at processTicksAndRejections (node:internal/process/task_queues:95:5)</failure>
+    </testcase>
+    <testcase classname="Combined Test Including Language Creation MakeASentenceEx Creation should create a new MakeASentenceEx" name="Combined Test Including Language Creation MakeASentenceEx Creation should create a new MakeASentenceEx" time="0.067">
+    </testcase>
+    <testcase classname="Combined Test Including Language Creation ImageToTextEx Creation should create a new ImageToTextEx" name="Combined Test Including Language Creation ImageToTextEx Creation should create a new ImageToTextEx" time="0.05">
+    </testcase>
+  </testsuite>
+  <testsuite name="User Signup" errors="0" failures="0" skipped="0" timestamp="2024-03-14T16:06:31" time="6.738" tests="2">
+    <testcase classname="User Signup Should signup a new user successfully" name="User Signup Should signup a new user successfully" time="0.795">
+    </testcase>
+    <testcase classname="User Login Should login the user successfully" name="User Login Should login the user successfully" time="0.221">
     </testcase>
   </testsuite>
 </testsuites>
