sign up form full responsive

--- a/frontend/src/styles/Register.css
+++ b/frontend/src/styles/Register.css
@@ -140,5 +140,36 @@
 }
 
 @media only screen and (max-width: 450px) {
+    .register-form {
+        padding: 10px;
+        margin: 0;
+    }
 
+    .register-form h1 {
+        margin-bottom: 20px;
+        font-size: 30px;
+    }
+
+    .register-form input {
+        width: 70%;
+    }
+}
+
+@media only screen and (max-width: 375px) {
+    .register-form {
+        padding: 10px;
+        margin: 0;
+    }
+
+    .register-form h1 {
+        font-size: 25px;
+    }
+
+    .register-form input {
+        width: 80%;
+    }
+
+    .register-form button {
+        width: 50%;
+    }
 }
