--- a/frontend/src/styles/NavBar.css
+++ b/frontend/src/styles/NavBar.css
@@ -39,12 +39,12 @@
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    margin-right: 20px;
+    margin-right: 10px;
     z-index: 99;
 }
 
 .nav-button button {
-    margin-left: 10px;
+    margin-right: 10px;
     cursor: pointer;
     background-color: #89e219;
     border: none;
@@ -92,10 +92,62 @@
     background-color: #98f02d;
 }
 
+
+
+
+/* language dropdown*/
+.locale-select select {
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    background-color: transparent;
+    border: none;
+    font-size: 12px;
+    color: #333;
+    padding: 5px 5px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    /*width: 40px; !* Set maximum width *!*/
+    max-width: 100%; /* Ensure it doesn't exceed the maximum width */
+    cursor: pointer;
+    outline: none;
+}
+
+.locale-select select option {
+    background-color: #fff;
+    color: #333;
+}
+
+/* Optional: Style the dropdown on hover */
+.locale-select:hover select {
+    background-color: #f9f9f9;
+}
+
+
+
+
+
+
+
+
+
+
+
+
 /* Responsive adjustments */
 @media only screen and (max-width: 768px) {
     .nav-logo h1{
         font-size: 1.5em;
+        margin-right: 5px;
+    }
+
+    .nav-button button {
+        font-size: 16px;
+        padding: 10px;
+    }
+
+    .nav-logo .desktop-logo {
+        margin-right: 5px;
     }
 
     .nav-button {
@@ -108,7 +160,7 @@
     }
 }
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 540px) {
 
     .nav-logo {
         margin-left: 10px;
@@ -132,16 +184,18 @@
 
 }
 
-@media only screen and (max-width: 300px) {
+@media only screen and (max-width: 375px) {
+
     .nav-button button {
-        font-size: 14px;
-        margin: 4px;
-        padding: 10px 10px;
+        font-size: 12px;
+        margin: 5px;
+        padding: 10px 5px;
+        min-width: 85px;
     }
 
     .nav-logo .mobile-logo {
-        width: 50px;
-        height: 50px;
+        width: 45px;
+        height: 45px;
     }
 
 }
